# Winsock-Chat

./: ClientEXE.rar  README.md
Client/: CMakeLists.txt  Client.cpp  Client.h
Server/: CMakeLists.txt  Server.cpp  Server.h
